-----------------------------------------------------------
GameMonkey Script Change Log

Newer entries are at the bottom.
Dates are DD-Mon-YYYY eg. 15 Apr 2013 

Note that very minor changes like a renamed variable or 
modified comment may not appear in this list.
-----------------------------------------------------------

22 Dec 2017
o Fix some type casts. 
o Integrate some changes from DrEvil's gmscripex.
o Add VS2013 native visualizer debug expansion script based on DrEvil's VS2010 version.
o Update changelog to be more readable with recent entries first and unambiguous dates.

22 Nov 2017
o Updated code and some projects to build with MSVC 2017.
o Removed older projects and solutions for GME at least.
o Fixed code to support 32 and 64 bit gmint, gmfloat types.
  GM files and binds, GME and GML updated and tested only.

13 Jul 2015
o Fix 64bit related. Thanks palota.

19 May 2014
o Fix EndOn bug reported by Korrion

18 May 2013
o Reordered GC descruction sequence to avoid Write Barrier mis-fire.

09 Jun 2012
o Add back ++,-- pre inc, dec operators (Experimental, code restored from v0.9)

12 May 2012
o Fixed Fork stack growth bug. Thanks funkbot.

10 Feb 2012
o Added experimental project gmddotnet (gmDebuggerNet) which is gmd ported to C# .Net from C++ MFC.
  This was simply an experiment, this example debugger is as identically terrible as the original version.

13 Jan 2012
o Improved syntactical sugar for functions. Thanks HenryTran.

7 Oct 2011
o Fixed GC (Another attempt)

4 Oct 2011
o Fixed GC tricolor invariance wasn't preserved with local object transfer of ownership.

3 Oct 2011
o Fixed GC root scan to ignore persistent objects.

2 Oct 2011
o Fixed GC root scan. (PS. Failed attempt)
o Increased GMTHREAD_MAXBYTESIZE to allow samples to run in 64bit
o Fixed gmTable 64bit gmVariable equality test.
o Fixed byte code generator. 64bit was mixing 32 and 64 bit patched addresses.

29 Jun 2011
o Add 64bit MSVC build configurations for GME

17 Jun 2011